--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,6 +9,12 @@
         "src/*"
       ]
     },
+
+    "exclude": [
+      "node_modules",
+      "dist"
+    ],
+
     "lib": [
       "esnext",
       "dom",
