--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "core-js": "^3.8.3",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
-    "element-ui": "^2.15.5",
+    "nprogress": "^0.2.0",
     "vue": "^2.7.2",
     "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
